# pds-backup

./: .gitignore  CMakeLists.txt  README.md  client  example  makefile  pdsbackup.users  server  server.crt  server.pem  setup_env.sh  testProbe.txt
prova/: test1
src/client/: Client.cpp  Client.hpp  ClientExceptions.cpp  ClientExceptions.hpp  ClientUtility.cpp  ClientUtility.hpp  FileWatcher.cpp  FileWatcher.h  FileWatcher.hpp  MessageBuilder.cpp  MessageBuilder.hpp  clientexample.cpp  main.cpp
src/server/: Server.cpp  Server.hpp  Session.cpp  Session.hpp  User.cpp  User.hpp  UserCollection.cpp  UserCollection.hpp  main.cpp  server.cpp  serverexample.cpp
src/shared/: Body.cpp  Body.hpp  Checksum.cpp  Checksum.hpp  Exceptions.cpp  Exceptions.hpp  Header.cpp  Header.hpp  MessageBuilder.cpp  MessageBuilder.hpp  Protocol.cpp  Protocol.hpp  _include.hpp  consts.hpp  protocol.cpp  protocol.hpp
